# avocado

./: .cirrus.yml  .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .packit.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc_utils  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  Makefile.gh  Makefile.include  Makefile.pkg  README.rst  avocado-static-checks.conf  avocado.spec  codecov.yml  commitlint.config.ts  install-python-requirements  pyproject.toml  python-avocado.spec  requirements-dev.txt  requirements-doc.txt  requirements-docs.txt  requirements-python26.txt  requirements-selftests-python26.txt  requirements-selftests.txt  requirements-travis-python26.txt  requirements-travis.txt  requirements.txt  setup.cfg  setup.py  spell.ignore  version.py
.copr/: Makefile
avocado/: __init__.py  __main__.py  aexpect.py  data_dir.py  env.py  gdb.py  gdbmi.py  job.py  loader.py  multiplex.py  multiplex_config.py  multiplex_parser.py  multiplexer.py  params.py  paths.py  profiler.py  result.py  runner.py  runtime.py  settings.py  sysinfo.py  test.py  version.py  whiteboard.py
contrib/: avocado-find-unittests
debian/: changelog  control  copyright  python3-avocado.manpages  rules  watch
docs/: Makefile  README.rst
etc/: avocado.conf  settings.ini
examples/: .avocado.hint.example  avocado_example_plugins.py  mux-environment.yaml  mux-selftest-advanced.yaml  mux-selftest-distro.yaml  mux-selftest-params.yaml  mux-selftest.yaml  params.pict  task-lifecycle.py
examples/plugins/cli-cmd/hello/: hello.py  pyproject.toml  setup.py
examples/plugins/cli-cmd/hello_option/: hello_option.py  pyproject.toml  setup.py
examples/plugins/cli-cmd/hello_parser/: hello_parser.py  pyproject.toml  setup.py
examples/plugins/cli-cmd/hello_priority/: hello_priority.py  pyproject.toml  setup.py
examples/plugins/job-pre-post/mail/: Makefile  avocado_job_mail.py  pyproject.toml  setup.py
examples/plugins/job-pre-post/sleep/: avocado_job_sleep.py  jobsleep.py  pyproject.toml  setup.py
examples/plugins/test-pre-post/hello/: hello.py  pyproject.toml  setup.py
examples/plugins/tests/magic/: pyproject.toml  setup.py
examples/plugins/tests/magic/avocado_magic/: resolver.py  runner.py
examples/plugins/tests/rogue/: pyproject.toml  setup.py
examples/plugins/tests/rogue/avocado_rogue/: __init__.py  resolver.py  runner.py
html/: MANIFEST.in  setup.py
jobs/: release.py  timesensitive.py  vmimage.py
libexec/: avocado-bash-utils  avocado_debug  avocado_error
man/: avocado-rest-client.rst  avocado-runner-avocado-instrumented.rst  avocado-runner-dry-run.rst  avocado-runner-exec-test.rst  avocado-runner-noop.rst  avocado-runner-python-unittest.rst  avocado-runner-requirement-asset.rst  avocado-runner-requirement-package.rst  avocado-runner-sysinfo.rst  avocado-runner-tap.rst  avocado-runner.rst  (+2 more)
optional_plugins/ansible/: README.rst  pyproject.toml  setup.py
optional_plugins/ansible/avocado_ansible/: module.py
optional_plugins/golang/: README.rst  VERSION  pyproject.toml  setup.py
optional_plugins/golang/avocado_golang/: __init__.py  golang.py  runner.py
optional_plugins/golang/tests/: test_golang.py
optional_plugins/golang/tests/src/countavocados/: countavocados.go  countavocados_test.go
optional_plugins/html/: MANIFEST.in  README.rst  bootstrap_library_config.json  pyproject.toml  setup.py
optional_plugins/html/avocado_result_html/: __init__.py  avocado_result_html.py  result_html.py
optional_plugins/html/avocado_result_html/resources/static/css/: bootstrap.min.css
optional_plugins/html/avocado_result_html/resources/static/js/: bootstrap.min.js
optional_plugins/html/avocado_result_html/resources/templates/: report.mustache
optional_plugins/html/avocado_result_html/templates/: avocado_html.js  bootstrap.min.css  bootstrap.min.js  datatables.bootstrap.js  datatables.css  datatables.js  datatables.min.js  jquery.js  jquery.min.js  results.html  results.j2  style.css
optional_plugins/html/tests/: html_result.py  test_html_result.py
optional_plugins/mail/: MANIFEST.in  README.rst  VERSION  pyproject.toml  setup.py
optional_plugins/mail/avocado_result_mail/: result_mail.py
optional_plugins/result_upload/: README.rst  pyproject.toml  setup.py
optional_plugins/result_upload/avocado_result_upload/: __init__.py  result_upload.py
optional_plugins/resultsdb/: README.rst  VERSION  pyproject.toml  setup.py
optional_plugins/resultsdb/avocado_resultsdb/: __init__.py  resultsdb.py
optional_plugins/robot/: pyproject.toml  setup.py
optional_plugins/robot/avocado_robot/: __init__.py  robot.py  runner.py
optional_plugins/robot/tests/: avocado.robot  resolver.py  test_nrunner_interface.py  test_robot.py
optional_plugins/spawner_remote/: README.rst  VERSION  pyproject.toml  setup.py
optional_plugins/spawner_remote/avocado_spawner_remote/: __init__.py  spawner.py
optional_plugins/varianter_cit/: README.rst  VERSION  pyproject.toml  setup.py
optional_plugins/varianter_cit/avocado_varianter_cit/: Cit.py  CombinationMatrix.py  CombinationRow.py  Parameter.py  Parser.py  Solver.py  __init__.py  varianter_cit.py
optional_plugins/varianter_cit/tests/: basic.py  cit.py  combinationRow.py  solver.py  test_basic.py  test_cit.py  test_combinationMatrix.py  test_combinationRow.py  test_comninationMatrix.py  test_functional.py  test_solver.py  test_unit.py
optional_plugins/varianter_pict/: README.rst  VERSION  pyproject.toml  setup.py
optional_plugins/varianter_pict/avocado_varianter_pict/: __init__.py  varianter_pict.py
optional_plugins/varianter_yaml_to_mux/: README.rst  VERSION  pyproject.toml  setup.py
optional_plugins/varianter_yaml_to_mux/avocado_varianter_yaml_to_mux/: __init__.py  mux.py  varianter_yaml_to_mux.py
optional_plugins/varianter_yaml_to_mux/tests/: functional.py  test_functional.py  test_multiplex.py  test_mux.py  test_unit.py  unit.py
optional_plugins/varianter_yaml_to_mux/tests/.data/: mux-environment.yaml  mux-selftest-advanced.yaml  mux-selftest-using.yaml  mux-selftest.yaml
(+1960 files in other folders)
