[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-framework"
dynamic = ["version"]
authors = [
    {name = "Avocado Developers", email = "avocado-devel@redhat.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Natural Language :: English", "Operating System :: POSIX",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"]
description = "Avocado Test Framework"
requires-python = ">=3.8"
dependencies = ["setuptools"]
license = {text = "GPLv2+"}
readme = {file = "README.rst", content-type = "text/x-rst"}

[project.urls]
Homepage = "https://avocado-vt.readthedocs.io"
Repository = "http://github.com/avocado-framework/avocado.git"
Issues = "https://github.com/avocado-framework/avocado/issues"

[project.scripts]
avocado = "avocado.core.main:main"
avocado-runner-noop = "avocado.plugins.runners.noop:main"
avocado-runner-dry-run = "avocado.plugins.runners.dry_run:main"
avocado-runner-exec-test = "avocado.plugins.runners.exec_test:main"
avocado-runner-python-unittest = "avocado.plugins.runners.python_unittest:main"
avocado-runner-avocado-instrumented = "avocado.plugins.runners.avocado_instrumented:main"
avocado-runner-tap = "avocado.plugins.runners.tap:main"
avocado-runner-asset = "avocado.plugins.runners.asset:main"
avocado-runner-package = "avocado.plugins.runners.package:main"
avocado-runner-podman-image = "avocado.plugins.runners.podman_image:main"
avocado-runner-sysinfo = "avocado.plugins.runners.sysinfo:main"
avocado-software-manager = "avocado.utils.software_manager.main:main"
avocado-external-runner = "scripts.external_runner:main"

[project.entry-points."avocado.plugins.init"]
xunit = "avocado.plugins.xunit:XUnitInit"
jsonresult = "avocado.plugins.jsonresult:JSONInit"
sysinfo = "avocado.plugins.sysinfo:SysinfoInit"
tap = "avocado.plugins.tap:TAPInit"
jobscripts = "avocado.plugins.jobscripts:JobScriptsInit"
dict_variants = "avocado.plugins.dict_variants:DictVariantsInit"
json_variants = "avocado.plugins.json_variants:JsonVariantsInit"
run = "avocado.plugins.run:RunInit"
podman = "avocado.plugins.spawners.podman:PodmanSpawnerInit"
lxc = "avocado.plugins.spawners.lxc:LXCSpawnerInit"
nrunner = "avocado.plugins.runner_nrunner:RunnerInit"
testlogsui = "avocado.plugins.testlogs:TestLogsUIInit"
human = "avocado.plugins.human:HumanInit"

[project.entry-points."avocado.plugins.cli"]
xunit = "avocado.plugins.xunit:XUnitCLI"
json = "avocado.plugins.jsonresult:JSONCLI"
journal = "avocado.plugins.journal:Journal"
tap = "avocado.plugins.tap:TAP"
zip_archive = "avocado.plugins.archive:ArchiveCLI"
json_variants = "avocado.plugins.json_variants:JsonVariantsCLI"
nrunner = "avocado.plugins.runner_nrunner:RunnerCLI"
podman = "avocado.plugins.spawners.podman:PodmanCLI"

[project.entry-points."avocado.plugins.cli.cmd"]
config = "avocado.plugins.config:Config"
distro = "avocado.plugins.distro:Distro"
exec-path = "avocado.plugins.exec_path:ExecPath"
variants = "avocado.plugins.variants:Variants"
list = "avocado.plugins.list:List"
run = "avocado.plugins.run:Run"
sysinfo = "avocado.plugins.sysinfo:SysInfo"
plugins = "avocado.plugins.plugins:Plugins"
diff = "avocado.plugins.diff:Diff"
vmimage = "avocado.plugins.vmimage:VMimage"
assets = "avocado.plugins.assets:Assets"
jobs = "avocado.plugins.jobs:Jobs"
replay = "avocado.plugins.replay:Replay"
cache = "avocado.plugins.cache:Cache"

[project.entry-points."avocado.plugins.job.prepost"]
jobscripts = "avocado.plugins.jobscripts:JobScripts"
teststmpdir = "avocado.plugins.teststmpdir:TestsTmpDir"
human = "avocado.plugins.human:HumanJob"
testlogsui = "avocado.plugins.testlogs:TestLogsUI"
suite-dependency = "avocado.plugins.dependency:SuiteDependency"

[project.entry-points."avocado.plugins.test.pre"]
dependency = "avocado.plugins.dependency:DependencyResolver"
sysinfo = "avocado.plugins.sysinfo:SysInfoTest"

[project.entry-points."avocado.plugins.test.post"]
sysinfo = "avocado.plugins.sysinfo:SysInfoTest"

[project.entry-points."avocado.plugins.result"]
xunit = "avocado.plugins.xunit:XUnitResult"
json = "avocado.plugins.jsonresult:JSONResult"
zip_archive = "avocado.plugins.archive:Archive"

[project.entry-points."avocado.plugins.result_events"]
human = "avocado.plugins.human:Human"
tap = "avocado.plugins.tap:TAPResult"
journal = "avocado.plugins.journal:JournalResult"
fetchasset = "avocado.plugins.assets:FetchAssetJob"
sysinfo = "avocado.plugins.sysinfo:SysInfoJob"
testlogging = "avocado.plugins.testlogs:TestLogging"
bystatus = "avocado.plugins.bystatus:ByStatusLink"
beaker = "avocado.plugins.beaker_result:BeakerResult"

[project.entry-points."avocado.plugins.varianter"]
json_variants = "avocado.plugins.json_variants:JsonVariants"
dict_variants = "avocado.plugins.dict_variants:DictVariants"

[project.entry-points."avocado.plugins.resolver"]
exec-test = "avocado.plugins.resolvers:ExecTestResolver"
python-unittest = "avocado.plugins.resolvers:PythonUnittestResolver"
avocado-instrumented = "avocado.plugins.resolvers:AvocadoInstrumentedResolver"
tap = "avocado.plugins.resolvers:TapResolver"
runnable-recipe = "avocado.plugins.resolvers:RunnableRecipeResolver"
runnables-recipe = "avocado.plugins.resolvers:RunnablesRecipeResolver"

[project.entry-points."avocado.plugins.suite.runner"]
nrunner = "avocado.plugins.runner_nrunner:Runner"

[project.entry-points."avocado.plugins.runnable.runner"]
avocado-instrumented = "avocado.plugins.runners.avocado_instrumented:AvocadoInstrumentedTestRunner"
tap = "avocado.plugins.runners.tap:TAPRunner"
noop = "avocado.plugins.runners.noop:NoOpRunner"
dry-run = "avocado.plugins.runners.dry_run:DryRunRunner"
exec-test = "avocado.plugins.runners.exec_test:ExecTestRunner"
python-unittest = "avocado.plugins.runners.python_unittest:PythonUnittestRunner"
asset = "avocado.plugins.runners.asset:AssetRunner"
package = "avocado.plugins.runners.package:PackageRunner"
podman-image = "avocado.plugins.runners.podman_image:PodmanImageRunner"
sysinfo = "avocado.plugins.runners.sysinfo:SysinfoRunner"

[project.entry-points."avocado.plugins.spawner"]
process = "avocado.plugins.spawners.process:ProcessSpawner"
podman = "avocado.plugins.spawners.podman:PodmanSpawner"
lxc = "avocado.plugins.spawners.lxc:LXCSpawner"

[project.entry-points."avocado.plugins.cache"]
requirement = "avocado.plugins.requirement_cache:RequirementCache"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["selftests*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["avocado/", "optional_plugins/"]

[tool.pylint.main]
extension-pkg-whitelist = ["netifaces"]
ignore-patterns = [".git"]
load-plugins = ["pylint.extensions.no_self_use"]

[tool.pylint."messages control"]
disable = [
    "C0103",
    "C0114",
    "C0115",
    "C0116",
    "C0200",
    "C0201",
    "C0301",
    "C0302",
    "C0321",
    "C0325",
    "C0413",
    "C0415",
    "C1804",
    "C1805",
    "E0401",
    "E0611",
    "E1101",
    "E1120",
    "I0011",
    "I0020",
    "I0021",
    "I0022",
    "I0023",
    "R0201",
    "R0801",
    "R0901",
    "R0902",
    "R0903",
    "R0904",
    "R0911",
    "R0912",
    "R0913",
    "R0914",
    "R0915",
    "R1702",
    "R1703",
    "R1704",
    "R1705",
    "R1706",
    "R1710",
    "R1711",
    "R1714",
    "R1717",
    "R1718",
    "R1719",
    "R1720",
    "R1721",
    "R1722",
    "R1723",
    "R1724",
    "R1729",
    "R1730",
    "R1732",
    "W0212",
    "W0511",
    "W0703",
    "W0707",
    "W1203",
]
enable = ["all"]

[tool.pylint.spelling]
max-spelling-suggestions = 4

[tool.pylint.exceptions]
overgeneral-exceptions=["builtin.BaseException", "builtin.Exception"]
