[metadata]
name = avocado
version = 36.0lts
summary = Avocado Test Framework
description-file =
    README.rst
author = Avocado developers
author-email = avocado-devel@redhat.com
home-page = http://avocado-framework.github.io/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Quality Engineers
    Intended Audience :: Developers
    License :: OSI Approved :: GPL v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
