[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-framework-plugin-golang"
dynamic = ["dependencies", "version"]
authors = [{name = "Avocado Developers", email = "avocado-devel@redhat.com"}]
description = "Avocado Plugin for Execution of Golang tests"
readme = {file = "README.rst", content-type = "text/x-rst"}

[project.scripts]
avocado-runner-golang = "avocado_golang.runner:main"

[project.entry-points."avocado.plugins.resolver"]
golang = "avocado_golang.golang:GolangResolver"

[project.entry-points."avocado.plugins.runnable.runner"]
golang = "avocado_golang.runner:GolangRunner"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["avocado_golang"]
