[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-framework-plugin-result-html"
dynamic = ["dependencies", "version"]
authors = [{name = "Avocado Developers", email = "avocado-devel@redhat.com"}]
description = "Avocado HTML Report for Jobs"
readme = {file = "README.rst", content-type = "text/x-rst"}

[project.entry-points."avocado.plugins.cli"]
html = "avocado_result_html:HTML"

[project.entry-points."avocado.plugins.init"]
html = "avocado_result_html:HTMLInit"

[project.entry-points."avocado.plugins.result"]
html = "avocado_result_html:HTMLResult"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["avocado_result_html"]
