[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-framework-plugin-result-upload"
dynamic = ["version", "readme"]
description = "Avocado Plugin to propagate Job results to remote host"
authors = [
    {name = "Avocado Developers", email = "avocado-devel@redhat.com"},
]
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "avocado-framework",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "http://avocado-framework.github.io/"

[project.entry-points."avocado.plugins.cli"]
results_upload = "avocado_result_upload.result_upload:ResultUploadCLI"

[project.entry-points."avocado.plugins.result"]
results_upload = "avocado_result_upload.result_upload:ResultUpload"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["avocado_result_upload*"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.rst", content-type = "text/x-rst"}
