[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-framework-plugin-resultsdb"
dynamic = ["dependencies", "version"]
authors = [{name = "Avocado Developers", email = "avocado-devel@redhat.com"}]
description = "Avocado Plugin to propagate Job results to Resultsdb"
readme = {file = "README.rst", content-type = "text/x-rst"}

[project.urls]
Homepage = "https://avocado-vt.readthedocs.io"

[project.entry-points."avocado.plugins.cli"]
resultsdb = "avocado_resultsdb.resultsdb:ResultsdbCLI"

[project.entry-points."avocado.plugins.result_events"]
resultsdb = "avocado_resultsdb.resultsdb:ResultsdbResultEvent"

[project.entry-points."avocado.plugins.result"]
resultsdb = "avocado_resultsdb.resultsdb:ResultsdbResult"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["avocado_resultsdb"]
