[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-framework-plugin-varianter-pict"
dynamic = ["dependencies", "readme", "version"]
authors = [{name = "Avocado Developers", email = "avocado-devel@redhat.com"}]
description = "Varianter with combinatorial capabilities by PICT"

[project.urls]
Homepage = "https://avocado-vt.readthedocs.io"

[project.entry-points."avocado.plugins.cli"]
varianter_pict = "avocado_varianter_pict.varianter_pict:VarianterPictCLI"

[project.entry-points."avocado.plugins.varianter"]
varianter_pict = "avocado_varianter_pict.varianter_pict:VarianterPict"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["avocado_varianter_pict"]
