[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avocado-hello-world-option"
version = "1.0"
description = "Avocado Hello World CLI command with config option"

[project.entry-points."avocado.plugins.cli.cmd"]
hello_option = "hello_option:HelloWorld"

[tool.setuptools]
py-modules = ["hello_option"]
